# multi-drone-testbed

./: .gitignore  ReadMe.md  run_hardware_test.sh  run_sim.py  setup.sh
cache/: 21BC0875.json  986EB32D.json  D7710410.json
config/: crazyflies.yaml  motion_capture.yaml
ros2_ws/src/drone_testbed/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_testbed/config/: testbed.yaml
ros2_ws/src/drone_testbed/drone_testbed/: algorithm_manager.py  crazyflie_node.py  drone_node.py  mocap_state_node.py  sim_visualizer.py
ros2_ws/src/drone_testbed/drone_testbed/algorithms/: __init__.py  base_algorithm.py  consensus.py  leader_follower.py  registry.py  trochoidal.py
ros2_ws/src/drone_testbed/drone_testbed/dynamics/: __init__.py  double_integrator.py
ros2_ws/src/drone_testbed/drone_testbed/utils/: __init__.py  config_loader.py  types.py
ros2_ws/src/drone_testbed/launch/: hardware_single.launch.py  sim.launch.py
scripts/: emergency_land.py  flip_attempt.py  simple_flight.py  test_flight.py
